<resources>
    <string name="app_name">ChoreMore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="dynamic_text_unset">Unset</string>

    <!-- edit chore activity -->
    <string name="edit_chore_title">Edit Chore</string>
    <string name="edit_chore_name">Chore Name:</string>
    <string name="edit_chore_name_hint">Enter Chore Name</string>
    <string name="edit_chore_assignee">Assign to:</string>
    <string name="edit_chore_dueDate">Due Date:</string>
    <string name="edit_chore_repeat">Repeat:</string>
    <string name="edit_chore_resources_required">Resources Required:</string>
    <string name="edit_chore_resources_required_hint"> Enter Resources</string>
    <string name="edit_chore_points">Points:</string>
    <string name="edit_chore_points_hint"># of points</string>
    <string name="edit_chore_description">Description:</string>
    <string name="edit_chore_description_hint">Write description of task</string>
    <string name="edit_chore_cancel">Cancel</string>
    <string name="edit_chore_save">Save</string>
</resources>
