<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uottawa.choremore.EditChoreActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/edit_chore_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_chore_name_hint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_assignee"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_dueDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_repeat"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_resources_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_chore_resources_required_hint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_points"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_chore_points_hint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_chore_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_chore_description_hint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_chore_cancel"
            android:layout_gravity="start"
            />
        <android.support.v4.widget.Space
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_chore_save"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>
